Add background image

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Leader Board</title>
 </head>
 
 <body>
@@ -26,6 +26,12 @@
                 <input type="text" placeholder="your name" name="name" id="name" class="name">
                 <input type="number" placeholder="your score" name="score" id="score" class="score">
                 <button class="btn-submit" type="button">submit</button>
+                <div class="error hidden">
+                    <span>❌ OOPS!!  Fill up the input</span>
+                  </div>
+                  <div class="success hidden">
+                    <span>✅ The entry added successfully</span>
+                  </div>
             </div>
         </div>
     </div>
